# retained

./: Cargo.toml  LICENSE-MIT  README.md
examples/egui-hello-world/: Cargo.toml
examples/egui-hello-world/src/: main.rs
examples/egui-miniquad-demo/: Cargo.toml
examples/egui-miniquad-demo/src/: main.rs
examples/hello-world/: Cargo.toml
examples/hello-world/src/: main.rs
examples/hello_world/: Cargo.toml
examples/hello_world/src/: main.rs
lib/: Cargo.toml
lib/examples/: example.rs
lib/src/: __private.rs  lib.rs
macro/: Cargo.toml
macro/src/: lib.rs  retained_let.rs  state.rs
macro/src/retained_let/: default.rs  inplace.rs  mod.rs  provided.rs
