[workspace]
members = ["macro", "lib", "examples/*"]
resolver = "2"

[workspace.package]
description = "retained"
version = "0.0.1"
edition = "2021"
authors = ["storycraft <storycraft@pancake.sh>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/storycraft/retained"

[workspace.dependencies]
retained = { path = "./lib" }
retained-macro = { version = "0.0.1", path = "./macro" }
