[package]
name = "retained-macro"
description = { workspace = true }
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.84"
syn = { version = "2.0", features = ["full", "visit-mut", "visit"] }
quote = "1.0.36"
