[package]
name = "egui-miniquad-demo"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
retained = { workspace = true }

miniquad = { version = "=0.4.0" }
egui-miniquad = { git = "https://github.com/not-fl3/egui-miniquad", rev = "5df57233a60f75faadfa14a3ad9d4cddde637605" }
egui = { version = "0.27", features = ["bytemuck"] }
egui_demo_lib = { version = "0.27", default-features = false }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"
